# milvus-search-embeddings

./: .env.example  .envrc  .gitignore  INSTALL.md  MILVUS_OPTIMIZATION.md  MilvusUtils.py  README_MODELS.md  activate_venv.ps1  config.py  create-collection.py  create-db.py  delete-collection.py  devfile.yaml  diagnose_env.py  drop-db.py  main.py  pantoja-vs-asakura.html  pyproject.toml  pytest.ini  readme.md  requirements.txt  run_tests.py  search-envs.sh  search.py  setup_dev.py  start_dev.bat  test_config.py  vectorize-documents.py  verify_env.py
.amazonq/: mcp.json
Tests/: LOADER_TESTS_README.md  README.md  conftest.py  test_MilvusUtils.py  test_all_loaders.py  test_db_scripts.py  test_env_vars.py  test_integration.py  test_loaders_simple.py  test_loaders_with_env.py  test_milvus_utils.py  test_missing_env.py  test_state_union_loader.py  test_utils.py  test_utils_final.py  test_utils_simple.py  test_utils_updated.py
advanced-search/: config.py  readme.md  search-hf-gradio-chat.py  search-hf-streamlit-rag-blocked.py  search-hf-streamlit-rag.py  search-ollama-chat.py  search-ollama-gradio-chat.py  search-ollama-rag.py  search-ollama-streamlit-rag-optimized.py  search-ollama-streamlit-rag.py  search-rag-streamlit.py  search_hf_gradio_chat.py  search_hf_streamlit_rag.py  search_ollama_gradio_chat.py  search_ollama_rag.py  search_ollama_streamlit_rag.py
airflow/: README.md
benchmark/: benchmarking_mps_hf.py  benchmarking_mps_ollama.py  ollama-threads-check.py  readme.md  set-hf-token.sh
core/: MilvusUtils.py  __init__.py  client.py  collections.py  config.py  create_collection.py  create_db.py  databases.py  drop_collection.py  drop_db.py  embeddings.py  exceptions.py  milvus_utils_legacy.py  (+1 more)
(+126 files in other folders)
